foundation-objs/main/default/objects/Lead/fields/LSQ_SF_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>LSQ_SF_Lead_Id__c</fullName>
    <label>LSQ SF Lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>