foundation-objs/main/default/objects/Lead/fields/Market_Team__c.field-meta.xml
<CustomField>
    <fullName>Market_Team__c</fullName>
    <label>Market Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA/SME</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Partner Community</fullName>
            </value>
            <value>
                <fullName>Partner Success</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Tax Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>