foundation-objs/main/default/objects/Lead/fields/Marketing_Activity_Category__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity_Category__c</fullName>
    <label>Marketing Activity Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Activity_Category</valueSetName>
    </valueSet>
</CustomField>