foundation-objs/main/default/objects/Lead/fields/marketing_pan__c.field-meta.xml
<CustomField>
    <fullName>marketing_pan__c</fullName>
    <label>marketing pan</label>
    <length>10</length>
    <type>Text</type>
</CustomField>