foundation-objs/main/default/objects/Lead/fields/marketing_tunrover_dealdesk__c.field-meta.xml
<CustomField>
    <fullName>marketing_tunrover_dealdesk__c</fullName>
    <label>marketing tunrover(dealdesk)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;25Cr</fullName>
            </value>
            <value>
                <fullName>25-50Cr</fullName>
            </value>
            <value>
                <fullName>51-100 Cr</fullName>
            </value>
            <value>
                <fullName>101-200 Cr</fullName>
            </value>
            <value>
                <fullName>201-500 Cr</fullName>
            </value>
            <value>
                <fullName>501-1000 Cr</fullName>
            </value>
            <value>
                <fullName>1001-2500 Cr</fullName>
            </value>
            <value>
                <fullName>2501-5000 Cr</fullName>
            </value>
            <value>
                <fullName>&lt; 50 Lakhs</fullName>
            </value>
            <value>
                <fullName>50 Lakhs - 1Cr</fullName>
            </value>
            <value>
                <fullName>1 - 5 Cr</fullName>
            </value>
            <value>
                <fullName>5 - 10 Cr</fullName>
            </value>
            <value>
                <fullName>10 - 25 Cr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>