foundation-objs/main/default/objects/Lead/fields/MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date__c</fullName>
    <label>MQL Date</label>
    <type>Date</type>
</CustomField>