foundation-objs/main/default/objects/Lead/fields/MQL_or_Not__c.field-meta.xml
<CustomField>
    <fullName>MQL_or_Not__c</fullName>
    <label>MQL or Not</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>Need More Nurturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>