foundation-objs/main/default/objects/Lead/fields/No_of_airlines__c.field-meta.xml
<CustomField>
    <fullName>No_of_airlines__c</fullName>
    <label>No of airlines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>