foundation-objs/main/default/objects/Lead/fields/No_of_CA_Clients__c.field-meta.xml
<CustomField>
    <fullName>No_of_CA_Clients__c</fullName>
    <label>No. of CA Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>