foundation-objs/main/default/objects/Lead/fields/No_of_CA_Clients_Range__c.field-meta.xml
<CustomField>
    <fullName>No_of_CA_Clients_Range__c</fullName>
    <label>No. of CA Clients (Range)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 10</fullName>
            </value>
            <value>
                <fullName>10  - 25</fullName>
            </value>
            <value>
                <fullName>25 - 50</fullName>
            </value>
            <value>
                <fullName>50 - 100</fullName>
            </value>
            <value>
                <fullName>100 - 200</fullName>
            </value>
            <value>
                <fullName>200 - 500</fullName>
            </value>
            <value>
                <fullName>500+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>