foundation-objs/main/default/objects/Lead/fields/No_Of_Demos_Done__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Demos_Done__c</fullName>
    <label>No Of Demos Done</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>