foundation-objs/main/default/objects/Lead/fields/No_of_GSTINS_not_captured__c.field-meta.xml
<CustomField>
    <fullName>No_of_GSTINS_not_captured__c</fullName>
    <formula>if(No_of_GSTIN__c&lt;1,1,0)</formula>
    <label>No of GSTINS not captured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>