foundation-objs/main/default/objects/Lead/fields/No_of_sales_invoices_Not_Captured__c.field-meta.xml
<CustomField>
    <fullName>No_of_sales_invoices_Not_Captured__c</fullName>
    <formula>if( Number_of_Sales_Invoices__c &lt;1,1,0)</formula>
    <label>No of sales invoices Not Captured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>