foundation-objs/main/default/objects/Lead/fields/No_of_times_Edited_By_Owner_Lead_Teams__c.field-meta.xml
<CustomField>
    <fullName>No_of_times_Edited_By_Owner_Lead_Teams__c</fullName>
    <description>This Field is Created for the Validation purpose of Lead Team Record Access</description>
    <label>No of times Edited By Owner Lead Teams</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>