foundation-objs/main/default/objects/Lead/fields/No_of_Times_POC_has_Came__c.field-meta.xml
<CustomField>
    <fullName>No_of_Times_POC_has_Came__c</fullName>
    <label>No of Times POC has Came</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>