foundation-objs/main/default/objects/Lead/fields/No_of_Vendors__c.field-meta.xml
<CustomField>
    <fullName>No_of_Vendors__c</fullName>
    <inlineHelpText>Enter the estimated no of vendors the company has</inlineHelpText>
    <label>No. of Vendors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>