foundation-objs/main/default/objects/Lead/fields/notes_last_contacted__c.field-meta.xml
<CustomField>
    <fullName>notes_last_contacted__c</fullName>
    <description>The last time a call, email, or meeting was logged for a contact. This is set automatically by HubSpot based on user actions in the contact record.</description>
    <label>Last Contacted</label>
    <type>DateTime</type>
</CustomField>