foundation-objs/main/default/objects/Lead/fields/notes_last_updated__c.field-meta.xml
<CustomField>
    <fullName>notes_last_updated__c</fullName>
    <description>The last time a note, call, email, meeting, or task was logged for a contact. This is set automatically by HubSpot based on user actions in the contact record.</description>
    <label>Last Activity Date</label>
    <type>DateTime</type>
</CustomField>