foundation-objs/main/default/objects/Lead/fields/notes_next_activity_date__c.field-meta.xml
<CustomField>
    <fullName>notes_next_activity_date__c</fullName>
    <description>The date of the next upcoming activity for a contact. This is set automatically by HubSpot based on user actions in the contact record.</description>
    <label>Next Activity Date</label>
    <type>DateTime</type>
</CustomField>