foundation-objs/main/default/objects/Lead/fields/Number_of_B2B_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Number_of_B2B_Invoices__c</fullName>
    <label>Number of B2B Invoices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>