foundation-objs/main/default/objects/Lead/fields/Number_of_Enterprise_Clients__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Enterprise_Clients__c</fullName>
    <label>Number of Enterprise Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>