foundation-objs/main/default/objects/Lead/fields/Number_of_PAN__c.field-meta.xml
<CustomField>
    <fullName>Number_of_PAN__c</fullName>
    <label>Number of PAN</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>