foundation-objs/main/default/objects/Lead/fields/Open_Lead__c.field-meta.xml
<CustomField>
    <fullName>Open_Lead__c</fullName>
    <formula>NOT(OR(ISPICKVAL(Status, &apos;Unqualified&apos;), ISPICKVAL(Status, &apos;Rejected&apos;), ISPICKVAL(Status, &apos;Duplicate&apos;),ISPICKVAL(Status, &apos;Qualified&apos;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Lead</label>
    <type>Checkbox</type>
</CustomField>