foundation-objs/main/default/objects/Lead/fields/Other_Reason_for_Loss__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_for_Loss__c</fullName>
    <label>Other Reason for Loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>