foundation-objs/main/default/objects/Lead/fields/Owner_PG_Growth__c.field-meta.xml
<CustomField>
    <fullName>Owner_PG_Growth__c</fullName>
    <formula>Owner:User.PG_Growth__c</formula>
    <label>Owner PG/Growth</label>
    <type>Text</type>
</CustomField>