foundation-objs/main/default/objects/Lead/fields/Pain_Score__c.field-meta.xml
<CustomField>
    <fullName>Pain_Score__c</fullName>
    <label>Pain Score</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>