foundation-objs/main/default/objects/Lead/fields/PAN__c.field-meta.xml
<CustomField>
    <fullName>PAN__c</fullName>
    <externalId>true</externalId>
    <label>Primary PAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>