foundation-objs/main/default/objects/Lead/fields/Partner_s_primary_OEM__c.field-meta.xml
<CustomField>
    <fullName>Partner_s_primary_OEM__c</fullName>
    <label>Partner&apos;s primary OEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Marg</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Netsuite</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>SAP B1</fullName>
            </value>
            <value>
                <fullName>SAP HANA</fullName>
            </value>
            <value>
                <fullName>Tally</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>