foundation-objs/main/default/objects/Lead/fields/Paying_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Paying_Capacity__c</fullName>
    <label>Paying Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>