foundation-objs/main/default/objects/Lead/fields/PG_Growth_Lead__c.field-meta.xml
<CustomField>
    <fullName>PG_Growth_Lead__c</fullName>
    <formula>if( OR(ISPICKVAL( Final_Segment__c , &quot;Segment 5&quot;),ISPICKVAL( Final_Segment__c , &quot;Segment 6&quot;),ISPICKVAL( Final_Segment__c , &quot;Segment 7&quot;),ISPICKVAL( Final_Segment__c , &quot;Segment 8&quot;)),&quot;PG&quot;,&quot;Growth&quot;)</formula>
    <label>PG/Growth Lead</label>
    <type>Text</type>
</CustomField>