foundation-objs/main/default/objects/Lead/fields/PG_Inside_Sales__c.field-meta.xml
<CustomField>
    <fullName>PG_Inside_Sales__c</fullName>
    <label>PG Inside Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>