foundation-objs/main/default/objects/Lead/fields/POC1_Designation__c.field-meta.xml
<CustomField>
    <fullName>POC1_Designation__c</fullName>
    <label>POC1 Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>POC_Designation</valueSetName>
    </valueSet>
</CustomField>