foundation-objs/main/default/objects/Lead/fields/POC1_Director_Name__c.field-meta.xml
<CustomField>
    <fullName>POC1_Director_Name__c</fullName>
    <label>POC1 Director Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>