foundation-objs/main/default/objects/Lead/fields/POC1_Email__c.field-meta.xml
<CustomField>
    <fullName>POC1_Email__c</fullName>
    <label>POC1 Email</label>
    <type>Email</type>
</CustomField>