foundation-objs/main/default/objects/Lead/fields/POC1_Email_Type__c.field-meta.xml
<CustomField>
    <fullName>POC1_Email_Type__c</fullName>
    <label>POC1 Email Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Official</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>