foundation-objs/main/default/objects/Lead/fields/POC1_Name__c.field-meta.xml
<CustomField>
    <fullName>POC1_Name__c</fullName>
    <label>POC1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>