foundation-objs/main/default/objects/Lead/fields/POC1_Phone__c.field-meta.xml
<CustomField>
    <fullName>POC1_Phone__c</fullName>
    <label>POC1 Phone</label>
    <type>Phone</type>
</CustomField>