foundation-objs/main/default/objects/Lead/fields/POC1_Phone_Number_Type__c.field-meta.xml
<CustomField>
    <fullName>POC1_Phone_Number_Type__c</fullName>
    <label>POC1 Phone Number Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boardline</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>