foundation-objs/main/default/objects/Lead/fields/POC2_Designation__c.field-meta.xml
<CustomField>
    <fullName>POC2_Designation__c</fullName>
    <label>POC2 Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Accounts Manager</fullName>
            </value>
            <value>
                <fullName>Accounts Officer</fullName>
            </value>
            <value>
                <fullName>AGM Finance</fullName>
            </value>
            <value>
                <fullName>AGM Finance &amp; Taxation</fullName>
            </value>
            <value>
                <fullName>AGM Taxation</fullName>
            </value>
            <value>
                <fullName>Assistant Director</fullName>
            </value>
            <value>
                <fullName>Assistant IDT Manager</fullName>
            </value>
            <value>
                <fullName>Assistant Manager Accounts</fullName>
            </value>
            <value>
                <fullName>Assistant Manager Finance</fullName>
            </value>
            <value>
                <fullName>Auditor</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>Chief Accountant</fullName>
            </value>
            <value>
                <fullName>DGM Finance</fullName>
            </value>
            <value>
                <fullName>Director Finance</fullName>
            </value>
            <value>
                <fullName>Finance Controller</fullName>
            </value>
            <value>
                <fullName>Finance Head</fullName>
            </value>
            <value>
                <fullName>Finance Manager</fullName>
            </value>
            <value>
                <fullName>General Manager Finance</fullName>
            </value>
            <value>
                <fullName>General Manager IDT</fullName>
            </value>
            <value>
                <fullName>General Manager Taxation</fullName>
            </value>
            <value>
                <fullName>IDT Head</fullName>
            </value>
            <value>
                <fullName>Internal Auditor</fullName>
            </value>
            <value>
                <fullName>IT Head</fullName>
            </value>
            <value>
                <fullName>Manager IT</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Senior Manager Accounts</fullName>
            </value>
            <value>
                <fullName>Senior Manager Finance</fullName>
            </value>
            <value>
                <fullName>Tax Analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>