foundation-objs/main/default/objects/Lead/fields/POC2_Email__c.field-meta.xml
<CustomField>
    <fullName>POC2_Email__c</fullName>
    <label>POC2 Email</label>
    <type>Email</type>
</CustomField>