foundation-objs/main/default/objects/Lead/fields/POC2_Name__c.field-meta.xml
<CustomField>
    <fullName>POC2_Name__c</fullName>
    <label>POC2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>