foundation-objs/main/default/objects/Lead/fields/POC2_Phone__c.field-meta.xml
<CustomField>
    <fullName>POC2_Phone__c</fullName>
    <label>POC2 Phone</label>
    <type>Phone</type>
</CustomField>