foundation-objs/main/default/objects/Lead/fields/POC3_Director_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>POC3_Director_Email_ID__c</fullName>
    <label>POC3 Director Email ID</label>
    <type>Email</type>
</CustomField>