foundation-objs/main/default/objects/Lead/fields/POC4_Direct_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>POC4_Direct_Email_ID__c</fullName>
    <label>POC4 Direct Email ID</label>
    <type>Email</type>
</CustomField>