foundation-objs/main/default/objects/Lead/fields/POC4_Director_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>POC4_Director_Contact_No__c</fullName>
    <label>POC4 Director Contact No</label>
    <type>Phone</type>
</CustomField>