foundation-objs/main/default/objects/Lead/fields/POC4_Director_Designation__c.field-meta.xml
<CustomField>
    <fullName>POC4_Director_Designation__c</fullName>
    <label>POC4 Director Designation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>