foundation-objs/main/default/objects/Lead/fields/POC_1_Direct_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>POC_1_Direct_Email_ID__c</fullName>
    <label>POC1 Director Email ID</label>
    <type>Email</type>
</CustomField>