foundation-objs/main/default/objects/Lead/fields/POC_2_Direct_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>POC_2_Direct_Email_ID__c</fullName>
    <label>POC 2 Director Email ID</label>
    <type>Email</type>
</CustomField>