foundation-objs/main/default/objects/Lead/fields/POC_2_Director_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>POC_2_Director_Contact_No__c</fullName>
    <label>POC 2 Director Contact No</label>
    <type>Phone</type>
</CustomField>