foundation-objs/main/default/objects/Lead/fields/POC_2_Director_Designation__c.field-meta.xml
<CustomField>
    <fullName>POC_2_Director_Designation__c</fullName>
    <label>POC 2 Director Designation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>