foundation-objs/main/default/objects/Lead/fields/POC_3_Director_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>POC_3_Director_Contact_No__c</fullName>
    <label>POC 3 Director Contact No</label>
    <type>Phone</type>
</CustomField>