foundation-objs/main/default/objects/Lead/fields/Potential_Savings__c.field-meta.xml
<CustomField>
    <fullName>Potential_Savings__c</fullName>
    <label>Potential Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>