foundation-objs/main/default/objects/Lead/fields/Preffered_time_to_reach_out__c.field-meta.xml
<CustomField>
    <fullName>Preffered_time_to_reach_out__c</fullName>
    <label>Preffered time to reach out</label>
    <length>30</length>
    <type>Text</type>
</CustomField>