foundation-objs/main/default/objects/Lead/fields/Presently_Using__c.field-meta.xml
<CustomField>
    <fullName>Presently_Using__c</fullName>
    <label>Presently Using</label>
    <length>255</length>
    <type>Text</type>
</CustomField>