foundation-objs/main/default/objects/Lead/fields/Pricing_Parameters_Captured__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Parameters_Captured__c</fullName>
    <formula>if(OR(ISPICKVAL(Competition_Currently_Using__c,&quot;Don&apos;t Know&quot;),ISPICKVAL(Competition_Currently_Using__c,&quot;Other&quot;),  No_of_GSTIN__c&lt;1,Number_of_Sales_Invoices__c&lt;5),1,0)</formula>
    <label>Pricing Parameters Captured?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>