foundation-objs/main/default/objects/Lead/fields/Primary_Industry_international__c.field-meta.xml
<CustomField>
    <fullName>Primary_Industry_international__c</fullName>
    <label>Primary Industry (International)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>