foundation-objs/main/default/objects/Lead/fields/Priority_of_Lead__c.field-meta.xml
<CustomField>
    <fullName>Priority_of_Lead__c</fullName>
    <label>Priority of Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P0</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>