foundation-objs/main/default/objects/Lead/fields/product_2_deal_desk__c.field-meta.xml
<CustomField>
    <fullName>product_2_deal_desk__c</fullName>
    <label>product 2 (deal desk)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airline Credit,</fullName>
            </value>
            <value>
                <fullName>ASP/GSP,</fullName>
            </value>
            <value>
                <fullName>CFO Dashboard,</fullName>
            </value>
            <value>
                <fullName>E-invoicing,E-way BillKAM,Managed Services,</fullName>
            </value>
            <value>
                <fullName>Others,</fullName>
            </value>
            <value>
                <fullName>Recon,</fullName>
            </value>
            <value>
                <fullName>Max ITC,</fullName>
            </value>
            <value>
                <fullName>ClearOne(invoicing),</fullName>
            </value>
            <value>
                <fullName>TDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>