foundation-objs/main/default/objects/Lead/fields/product_2_demo__c.field-meta.xml
<CustomField>
    <fullName>product_2_demo__c</fullName>
    <label>product(2 demo )</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airline Credit</fullName>
            </value>
            <value>
                <fullName>ASP/GSP</fullName>
            </value>
            <value>
                <fullName>CFO Dashboard</fullName>
            </value>
            <value>
                <fullName>E-Invoicing</fullName>
            </value>
            <value>
                <fullName>E-way Bill</fullName>
            </value>
            <value>
                <fullName>KAM</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Recon</fullName>
            </value>
            <value>
                <fullName>Max ITC</fullName>
            </value>
            <value>
                <fullName>ClearOne (invoicing)</fullName>
            </value>
            <value>
                <fullName>TDS</fullName>
            </value>
            <value>
                <fullName>TDS 206 AB</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>I2P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>